--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,132 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
   text-align: center;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  width: 390px;
+  height: 700px;
+  margin: 5px;
+  border: 1px solid transparent;
+  border-radius: 25px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  background-image: url(/public/anime.gif);
+  background-size: 390px 700px;
+}
+
+.track-list {
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+.track-button svg {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  margin-left: -45px;
+  margin-top: 25px;
+  overflow: hidden;
+  text-align: center;
+  flex-shrink: 0;
+  user-select: none;
+  fill: currentcolor;
+  flex-shrink: 0;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  color: rgba(79, 235, 89, 0.8);
+
+}
+
+.song-name {
+  color: #fff;
+  font-size: 18px;
+  margin-left: 20px;
+}
+.song-name p {
+  color:rgb(255, 255, 255,0.5);
+  font-size: 12px;
+  text-align: left;
+}
+
+
+.track-button {
+  width: 350px;
+  height: 80px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding: 8px;
+  background-color: rgb(255, 255, 255,0.1);
+  border: none;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  -webkit-box-align: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.control-box {
+  width: 100%;
+  height: 150px;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: space-between;
+  border-radius: 10px;
+}
+.controller {
+  width: 100%;
+  height: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.controller button {
+  padding: 12px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  color: #fff;
+}
+
+.controller svg {
+  width: 1em;
+  height: 1em;
+  overflow: hidden;
+  display: inline-block;
+  text-align: center;
+  flex-shrink: 0;
+  user-select: none;
+  fill: currentcolor;
+  flex-shrink: 0;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  font-size: 2.7rem;
+  color: #fff;
+}
+.track-name {
+  margin-top: 10px;
+  font-size: 20px;
+  color: #fff;
+}
+
+.image-list {
+  position: relative;
+  margin-top: 4px;
+}
+
+.image-list img{
+  width: 70px;
+  height: 70px;
+  border-radius: 4px;
 }
